# NexusImager

./: CMakeLists.txt  README.md  metadata.json
.github/workflows/: build_vst3.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: MultibandCrossover.h  StereoEngine.h
src/: App.tsx  index.css
